# odgs-llm-bridge

./: CHANGELOG.md  LICENSE  README.md  odgs-llm.toml.example  pyproject.toml
src/odgs_llm/: __init__.py  bridge.py  cli.py  config.py  licensing.py
src/odgs_llm/capabilities/: __init__.py  audit_narrator.py  binding_discoverer.py  conflict_detector.py  drift_watchdog.py  regulatory_compiler.py
src/odgs_llm/prompts/: audit_narrator.md  binding_discoverer.md  conflict_detector.md  drift_watchdog.md  regulatory_compiler.md
src/odgs_llm/providers/: __init__.py  gemma.py  litellm_router.py  openai_compat.py
src/odgs_llm/schemas/: __init__.py  output_validators.py
tests/: test_bridge.py
